# 24944_A.A.Zaginaev_Parallelism_Theory

./: .gitignore
seminars/: 1-code.cpp  res.txt  test
task-1/: .gitignore  CMakeLists.txt  README.md  main.cpp
task-2/Lab-1/: CMakeLists.txt  graphs.py  main-1.cpp
task-2/Lab-2/: CMakeLists.txt  graphs.py  main.cpp
task-2/Lab-3/: CMakeLists.txt  graphs.py  main.cpp
task-3/Lab-1/: main.cpp
task-3/Lab-2/: CMakeLists.txt  ThreadPoll.cpp  main.cpp  test.cpp
task-4/: main.py
task-5/: dop_task.py  main.py  results.txt
task-6/: CMakeLists.txt  Makefile  benchmark.sh  heat_solver.cpp  jacobi.cpp  main.cpp  run_all.sh
